tests/ui/feature-gates/feature-gate-optimize_attribute.stderr
error[E0658]: the `#[optimize]` attribute is an experimental feature
  --> $DIR/feature-gate-optimize_attribute.rs:3:1
   |
LL | #[optimize(size)]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #54882 <https://github.com/rust-lang/rust/issues/54882> for more information
   = help: add `#![feature(optimize_attribute)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the `#[optimize]` attribute is an experimental feature
  --> $DIR/feature-gate-optimize_attribute.rs:6:1
   |
LL | #[optimize(speed)]
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #54882 <https://github.com/rust-lang/rust/issues/54882> for more information
   = help: add `#![feature(optimize_attribute)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the `#[optimize]` attribute is an experimental feature
  --> $DIR/feature-gate-optimize_attribute.rs:9:1
   |
LL | #[optimize(none)]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #54882 <https://github.com/rust-lang/rust/issues/54882> for more information
   = help: add `#![feature(optimize_attribute)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the `#[optimize]` attribute is an experimental feature
  --> $DIR/feature-gate-optimize_attribute.rs:12:1
   |
LL | #[optimize(banana)]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #54882 <https://github.com/rust-lang/rust/issues/54882> for more information
   = help: add `#![feature(optimize_attribute)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0539]: malformed `optimize` attribute input
  --> $DIR/feature-gate-optimize_attribute.rs:12:1
   |
LL | #[optimize(banana)]
   | ^^^^^^^^^^^------^^
   |            |
   |            valid arguments are `size`, `speed` or `none`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[optimize(banana)]
LL + #[optimize(none)]
   |
LL - #[optimize(banana)]
LL + #[optimize(size)]
   |
LL - #[optimize(banana)]
LL + #[optimize(speed)]
   |

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0539, E0658.
For more information about an error, try `rustc --explain E0539`.
